modified:   app/Http/Controllers/API/AuthController.php         modified:   routes/api.php         modified:   storage/api-docs/api-docs.json
